--- a/app/pom.xml
+++ b/app/pom.xml
@@ -22,7 +22,6 @@
 		<dependency>
    <groupId>com.fasterxml.jackson.dataformat</groupId>
    <artifactId>jackson-dataformat-xml</artifactId>
-   <version>2.15.4</version>
 </dependency>
 		
 		<dependency>
@@ -66,12 +65,20 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<!-- Mock Web Server for E2E Testing -->
+
+		<!-- Mock Web Server for testing -->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>mockwebserver</artifactId>
-			<scope>test</scope>
 		</dependency>
+		
+		<!-- Jakarta EE Annotation API for Spring Boot 3.x -->
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+		</dependency>
+		
+
 	</dependencies>
 	
 	<build>
