--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,40 +14,22 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springdoc</groupId>
-		    <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
-		    <version>2.0.2</version>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
 		</dependency>
 		<dependency>
-	        <groupId>io.github.openfeign</groupId>
-	        <artifactId>feign-core</artifactId>
-	    </dependency>
-		<dependency>
-			<groupId>io.github.openfeign</groupId>
-			<artifactId>feign-okhttp</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.github.openfeign</groupId>
-			<artifactId>feign-gson</artifactId>
-		</dependency>
-	    <dependency>
-		    <groupId>io.github.openfeign</groupId>
-		    <artifactId>feign-jaxb</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
 		</dependency>
-	  
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 	        <artifactId>jaxb-runtime</artifactId>
