✨ pom.xml 및 app/pom.xml 업데이트: Jackson, Lombok, MockWebServer 의존성 추가 및 버전 관리 개선. JsonConfig 및 RequestValidationService에서 JSON/XML 처리 로직 개선. ResponseWriterService에서 JSON 응답 작성 로직 최적화. 코드 품질 향상 및 문서화 작업 진행.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,40 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	
-	<parent>
-		<groupId>com.kt.kol</groupId>
-		<artifactId>kol-itg-gw</artifactId>
-		<version>0.0.1</version>
-	</parent>
-	
-	
-	<artifactId>common</artifactId>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.xml.bind</groupId>
-			<artifactId>jakarta.xml.bind-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-	        <artifactId>jaxb-runtime</artifactId>
-	    </dependency>
-	</dependencies>
+  <parent>
+    <groupId>com.kt.kol</groupId>
+    <artifactId>kol-itg-gw</artifactId>
+    <version>0.0.1</version>
+  </parent>
 
+  <artifactId>common</artifactId>
 
+  <dependencies>
+    <!-- DTO에 lombok 쓰면 유지 -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+    </dependency>
+
+    <!-- DTO에 @JsonProperty/@JsonInclude 등만 필요하면 'annotations'만 -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
+
+    <!-- JAXB 어노테이션 쓰면 유지, 아니면 제거 가능 -->
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
 </project>
